# airbnb-fullstack-django-nextjs

./: .gitignore
backend-django/: .pdm-python  README.md  pyproject.toml  requirements.txt  requirements2.txt
backend-django/api/: admin.py  api.py  models.py  permissions.py  schemas.py  serializers.py  urls.py  views.py
backend-django/api/management/commands/: seed.py
backend-django/api/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_user_permissions.py  0003_alter_user_groups_alter_user_user_permissions.py  0004_alter_user_groups_alter_user_user_permissions.py
backend-django/core/: settings.py  urls.py
frontend-nextjs/: bun.lockb  package.json
frontend-nextjs/src/app/: layout.jsx  page.jsx
frontend-nextjs/src/components/: Card.jsx  Navbar.jsx
frontend-nextjs/src/pages/: index.js  login.js  register.js
frontend-nextjs/src/pages/properties/: [id].js  createProperty.js
